--- a/tutorials/klusterai-api/integrating-tools.ipynb
+++ b/tutorials/klusterai-api/integrating-tools.ipynb
@@ -30,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ea62a1",
    "metadata": {},
    "source": [
     "## Prerequisites"
@@ -38,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83111fd4",
    "metadata": {},
    "source": [
     "Before getting started, ensure you have the following:\n",
@@ -215,7 +213,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"chatcmpl-a8059d75-cff4-444c-81f9-c8ffffb368ca\",\n",
+      "  \"id\": \"chatcmpl-47b7dfc6-a17e-4fac-b5bb-2ed5150fa0ca\",\n",
       "  \"choices\": [\n",
       "    {\n",
       "      \"finish_reason\": \"tool_calls\",\n",
@@ -229,7 +227,7 @@
       "        \"function_call\": null,\n",
       "        \"tool_calls\": [\n",
       "          {\n",
-      "            \"id\": \"chatcmpl-tool-1415b5225e9c4526b29c9df125a3b11e\",\n",
+      "            \"id\": \"chatcmpl-tool-4db47677c5684e8db141ecd02c6c5623\",\n",
       "            \"function\": {\n",
       "              \"arguments\": \"{\\\"expression\\\": \\\"1337 * 42\\\"}\",\n",
       "              \"name\": \"calculator\"\n",
@@ -241,7 +239,7 @@
       "      \"stop_reason\": 128008\n",
       "    }\n",
       "  ],\n",
-      "  \"created\": 1747264145,\n",
+      "  \"created\": 1747705029,\n",
       "  \"model\": \"klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\",\n",
       "  \"object\": \"chat.completion\",\n",
       "  \"service_tier\": null,\n",
@@ -348,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result of multiplying 1337 by 42 is 56,154.\n"
+      "The result of multiplying 1337 by 42 is 56154.\n"
      ]
     }
    ],
@@ -551,30 +549,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The latest findings on climate change include:\n",
-      "\n",
-      "1. **Increasing impacts of climate change on global ecosystems**: New studies have shown the effects of climate change on various ecosystems, including melting glaciers, rising sea levels, and changes in weather patterns.\n",
-      "2. **Advancements in renewable energy technologies**: Research has been focusing on improving renewable energy sources such as solar and wind power, which have shown promise in reducing carbon emissions and addressing climate challenges.\n",
-      "3. **Rising global temperatures**: Climate models predict that the planet will continue to warm, with an increase in average global temperatures by 2-4°C by the end of the century if greenhouse gas emissions continue to rise.\n",
-      "4. **Arctic ice sheet melting**: The Arctic ice sheet has been melting at an unprecedented rate, leading to changes in ocean currents and sea levels.\n",
-      "5. **Sea-level rise**: Coastal areas and low-lying islands are at risk of flooding due to rising sea levels, which is expected to continue in the coming decades.\n",
-      "6. **Extreme weather events**: Climate change is linked to an increase in extreme weather events such as heatwaves, droughts, and heavy rainfall events.\n",
-      "7. **Ocean acidification**: The absorption of carbon dioxide by the ocean has led to a decrease in pH levels, which can have negative impacts on marine life.\n",
-      "8. **Loss of biodiversity**: Climate change is causing shifts in species ranges and extinction risk, with many species facing threats to their survival.\n",
-      "9. **Water scarcity**: Changes in precipitation patterns and increasing evaporation due to warmer temperatures are leading to water shortages, affecting agriculture and human consumption.\n",
-      "10. **Climate-related displacement**: Rising temperatures and extreme weather events are leading to displacement of people, with a projected 143 million people facing forced migration by 2050.\n",
-      "\n",
-      "These findings emphasize the urgent need for action to reduce greenhouse gas emissions and mitigate the effects of climate change.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "search_query = \"What are the latest findings on climate change?\"\n",
     "search_response = run_with_tools(search_query, web_search_tools)\n",
@@ -610,11 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Describe multiple tools\n",
+    "# ── Tool specs ────────────────────────────────────────────────────────────\n",
     "multi_tools = [\n",
     "    {\n",
     "        \"type\": \"function\",\n",
@@ -662,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,15 +666,13 @@
     "            \"content\": json.dumps(result)\n",
     "        })\n",
     "\n",
-    "    follow_up = [\n",
-    "        {\"role\": \"user\", \"content\": original_query},\n",
-    "        msg.model_dump(),\n",
-    "        *tool_msgs,\n",
-    "    ]\n",
-    "\n",
     "    final = client.chat.completions.create(\n",
     "        model=model,\n",
-    "        messages=follow_up\n",
+    "        messages=[\n",
+    "            {\"role\": \"user\", \"content\": original_query},\n",
+    "            msg.model_dump(),\n",
+    "            *tool_msgs,\n",
+    "        ]\n",
     "    )\n",
     "    return final.choices[0].message.content"
    ]
@@ -711,22 +686,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The percentage increase in the Earth's temperature would be approximately 13.33%.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# ── Demo ─────────────────────────────────────────────────────────────────\n",
     "multi_query = (\n",
     "    \"If the Earth's temperature rises by 2 degrees, what percentage increase \"\n",
     "    \"is that from the current average global temperature of 15 degrees Celsius?\"\n",
     ")\n",
+    "\n",
     "multi_response = run_with_tools(multi_query, multi_tools)\n",
     "print(process_multi_tool_calls(multi_response, multi_query))"
    ]
@@ -749,35 +718,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The error message indicates that the calculator does not support the multiplication and division operators in the expression.\n",
-      "\n",
-      "To calculate the percentage increase in revenue, we can rewrite the expression as:\n",
-      "\n",
-      "(($1.8M - $1.2M) / $1.2M) * 100\n",
-      "\n",
-      "First, let's calculate the numerator:\n",
-      "\n",
-      "$1.8M - $1.2M = $0.6M\n",
-      "\n",
-      "Now, divide the result by $1.2M:\n",
-      "\n",
-      "$0.6M / $1.2M = 0.5\n",
-      "\n",
-      "Multiply the result by 100 to get the percentage increase:\n",
-      "\n",
-      "0.5 * 100 = 50%\n",
-      "\n",
-      "Therefore, the percentage increase in revenue according to the report is 50%.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def document_analysis_with_tools(document, question):\n",
     "    # Prepare the prompt\n",
@@ -815,94 +758,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Streaming with tool calls\n",
+    "## Real-world use case: Bitcoin to Satoshi USD conversion\n",
     "\n",
-    "When you set `stream=True`, kluster.ai pushes delta chunks to your client as soon as they’re ready. That means you can render tokens to the user in real time and watch the model decide mid-sentence to invoke a tool. \n",
+    "Let's implement a more advanced use case that demonstrates tool chaining to calculate the price of a Satoshi in USD. A Satoshi is 100,000,000 of a Bitcoin. Our example will:\n",
     "\n",
-    "In the helper above we listen to the stream, print regular text as it arrives, and intercept any `tool_calls` deltas: the moment we see `\"function\": {\"name\": \"calculator\" …}`, we log “Calling tool: calculator” and keep appending argument fragments until the model finishes the call. Only after the stream closes do we execute the tool and send the result back for a final completion. Streaming makes interactions feel instant, lets you show spinners or live-update UIs, and still preserves the deterministic tool-calling workflow you’ve seen in the earlier examples.\n"
+    "1. **Fetch market data** – use web search to look up the current BTC/USD price\n",
+    "2. **Parse the results** – extract the numeric price from text-based search results\n",
+    "3. **Calculate the conversion** – pass the extracted price to the calculator tool to find one Satoshi's value\n",
+    "4. **Format the response** – combine the data into a user-friendly answer\n",
+    "\n",
+    "As in prior examples, we are using mock data with simplified results for demonstration purposes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Calling tool: calculator\n",
-      "Arguments: {\"expression\": \"17 * 43 + 125\"}\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def stream_with_tools(prompt, tools, model):\n",
-    "    messages = [\n",
-    "        {\"role\": \"user\", \"content\": prompt}\n",
-    "    ]\n",
+    "def btc_satoshi_conversion_with_tools():\n",
+    "    \"\"\"\n",
+    "    Demonstrate a multi-tool chain using the existing calculator tool:\n",
+    "    1. Get mock Bitcoin price data (simulating web search)\n",
+    "    2. Use the calculator tool to find the value of one Satoshi\n",
+    "    \"\"\"\n",
+    "    print(\"Step 1: Looking up the current Bitcoin price...\")\n",
     "    \n",
-    "    stream = client.chat.completions.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        tools=tools,\n",
-    "        tool_choice=\"auto\",\n",
-    "        stream=True\n",
-    "    )\n",
+    "    # Simulate the web search result for Bitcoin price\n",
+    "    # In a real implementation, this would be the result of a web_search tool call\n",
+    "    btc_search_results = {\n",
+    "        \"results\": [\n",
+    "            {\n",
+    "                \"title\": \"Bitcoin Price Today | CoinMarketCap\",\n",
+    "                \"snippet\": \"The current price of Bitcoin (BTC) is $105,248.63 USD with a 24-hour trading volume of $52.7B USD.\",\n",
+    "                \"url\": \"https://coinmarketcap.com/currencies/bitcoin/\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"title\": \"Bitcoin USD (BTC-USD) Price, News, Quote & History - Yahoo Finance\",\n",
+    "                \"snippet\": \"Bitcoin (BTC) is trading at $105,248.63, up 3.7% in the past 24 hours. Market cap stands at $2.07T with a circulating supply of 19.7M BTC.\",\n",
+    "                \"url\": \"https://finance.yahoo.com/quote/BTC-USD\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
     "    \n",
-    "    # Track current tool call and accumulate arguments\n",
-    "    current_tool_calls = {}\n",
+    "    # Extract the Bitcoin price from the search results\n",
+    "    btc_price_str = btc_search_results[\"results\"][0][\"snippet\"].split(\"$\")[1].split(\" \")[0]\n",
+    "    btc_price = btc_price_str.replace(\",\", \"\")\n",
+    "    print(f\"Found Bitcoin price: ${btc_price}\")\n",
     "    \n",
-    "    # In a notebook, we'd display this differently than in a script\n",
-    "    for chunk in stream:\n",
-    "        if not chunk.choices or len(chunk.choices) == 0:\n",
-    "            continue\n",
-    "            \n",
-    "        delta = chunk.choices[0].delta\n",
-    "        \n",
-    "        # Handle regular content\n",
-    "        if hasattr(delta, 'content') and delta.content:\n",
-    "            print(delta.content, end=\"\")\n",
-    "            \n",
-    "        # Handle tool calls\n",
-    "        elif hasattr(delta, 'tool_calls') and delta.tool_calls:\n",
-    "            for tool_call in delta.tool_calls:\n",
-    "                # Skip if no function data\n",
-    "                if not tool_call.function:\n",
-    "                    continue\n",
-    "                    \n",
-    "                # Get or create entry for this tool call\n",
-    "                tool_id = tool_call.id\n",
-    "                if tool_id not in current_tool_calls:\n",
-    "                    current_tool_calls[tool_id] = {\n",
-    "                        \"name\": \"\",\n",
-    "                        \"arguments\": \"\"\n",
-    "                    }\n",
-    "                \n",
-    "                # Update tool name if present\n",
-    "                if hasattr(tool_call.function, 'name') and tool_call.function.name:\n",
-    "                    if not current_tool_calls[tool_id][\"name\"]:\n",
-    "                        print(f\"\\nCalling tool: {tool_call.function.name}\")\n",
-    "                    current_tool_calls[tool_id][\"name\"] = tool_call.function.name\n",
-    "                \n",
-    "                # Accumulate arguments if present\n",
-    "                if hasattr(tool_call.function, 'arguments') and tool_call.function.arguments:\n",
-    "                    current_tool_calls[tool_id][\"arguments\"] += tool_call.function.arguments\n",
+    "    print(\"\\nStep 2: Using calculator tool to find the value of one Satoshi...\")\n",
     "    \n",
-    "    # Print the final, complete arguments for each tool call\n",
-    "    for tool_id, tool_data in current_tool_calls.items():\n",
-    "        if tool_data[\"arguments\"]:\n",
-    "            print(f\"Arguments: {tool_data['arguments']}\")\n",
+    "    # Use the existing calculator tool to perform the calculation\n",
+    "    # 1 Satoshi = 1/100,000,000 of a Bitcoin\n",
+    "    calculation_expression = f\"{btc_price} / 100000000\"\n",
     "    \n",
-    "    print(\"\\n\")\n",
+    "    # Call the execute_calculator function that was defined earlier in the notebook\n",
+    "    calculation_result = execute_calculator(calculation_expression)\n",
+    "    \n",
+    "    if \"error\" in calculation_result:\n",
+    "        print(f\"Calculator error: {calculation_result['error']}\")\n",
+    "        # Fallback to manual calculation if the calculator tool fails\n",
+    "        satoshi_value = float(btc_price) / 100000000\n",
+    "        print(f\"Fallback calculation: One Satoshi = ${satoshi_value:.8f} USD\")\n",
+    "    else:\n",
+    "        satoshi_value = calculation_result[\"result\"]\n",
+    "        print(f\"Calculator result: One Satoshi = ${satoshi_value:.8f} USD\")\n",
+    "    \n",
+    "    # Format the final answer as the LLM would\n",
+    "    final_answer = f\"\"\"\n",
+    "Based on the current Bitcoin price of ${btc_price} USD, I used the calculator tool to find the value of one Satoshi.\n",
     "\n",
-    "# Test streaming with a simple query\n",
-    "stream_with_tools(\"Calculate: 17 * 43 + 125\", calculator_tools, model)"
+    "Since 1 Bitcoin (BTC) = 100,000,000 Satoshi, the value of one Satoshi is:\n",
+    "${btc_price} ÷ 100,000,000 = ${satoshi_value:.8f} USD\n",
+    "\n",
+    "Therefore, one Satoshi is currently worth ${satoshi_value:.8f} USD.\n",
+    "\"\"\"\n",
+    "    return final_answer\n",
+    "\n",
+    "btc_satoshi_result = btc_satoshi_conversion_with_tools()\n",
+    "print(btc_satoshi_result)"
    ]
   },
+  {
+  "cell_type": "code",
+  "execution_count": 12,
+  "metadata": {},
+  "outputs": [
+    {
+      "name": "stdout",
+      "output_type": "stream",
+      "text": [
+        "Step 1: Looking up the current Bitcoin price...\n",
+        "Found Bitcoin price: $105248.63\n",
+        "\n",
+        "Step 2: Using calculator tool to find the value of one Satoshi...\n",
+        "Calculator result: One Satoshi = $0.00105249 USD\n",
+        "\n",
+        "Based on the current Bitcoin price of $105248.63 USD, I used the calculator tool to find the value of one Satoshi.\n",
+        "\n",
+        "Since 1 Bitcoin (BTC) = 100,000,000 Satoshi, the value of one Satoshi is:\n",
+        "$105248.63 ÷ 100,000,000 = $0.00105249 USD\n",
+        "\n",
+        "Therefore, one Satoshi is currently worth $0.00105249 USD.\n"
+      ]
+    }
+  ],
+  "source": [
+    "# Demo: Bitcoin → Satoshi conversion\n",
+    "btc_satoshi_result = btc_satoshi_conversion_with_tools()\n",
+    "print(btc_satoshi_result)"
+  ]
+},
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -916,7 +882,7 @@
     "3. Web search tool usage\n",
     "4. Multiple tool combinations\n",
     "5. Real-world document analysis use case\n",
-    "6. Streaming tool calls\n",
+    "6. Currency conversion with web search and calculator tools\n",
     "\n",
     "You can extend this pattern to use other tools by defining their schemas and implementing the corresponding execution functions. kluster.ai's OpenAI-compatible API makes it straightforward to integrate with existing codebases.\n",
     "\n",
