fix: checking typos

--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -26,7 +26,7 @@
    "id": "82108a06",
    "metadata": {},
    "source": [
-    "### Setup and Pre-requisites\n"
+    "### Set up and Pre-requisites\n"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "id": "25590afc",
    "metadata": {},
    "source": [
-    "### API Keys and Model Endpoints\n",
+    "### API keys and Model endpoints\n",
     "\n",
     "We'll use getpass to securely input your kluster.ai API key without displaying it.\n",
     "\n",
@@ -68,8 +68,8 @@
     "from pprint import pprint\n",
     "\n",
     "# Get API key securely using getpass\n",
-    "KLUSTER_API_KEY = getpass(\"Enter your KlusterAI API Key: \")\n",
-    "KLUSTER_BASE_URL = \"https://api.kluster.ai/v1\" # KlusterAI base URL\n",
+    "KLUSTER_API_KEY = getpass(\"Enter your Kluster.ai API Key: \")\n",
+    "KLUSTER_BASE_URL = \"https://api.kluster.ai/v1\" # Kluster.ai base URL\n",
     "\n",
     "os.environ[\"OPENAI_API_KEY\"] = KLUSTER_API_KEY # LlamaIndex uses this env var for OpenAI-compatible APIs\n",
     "os.environ[\"OPENAI_API_BASE\"] = KLUSTER_BASE_URL"
@@ -144,7 +144,7 @@
    "source": [
     "## Adding a PDF Document\n",
     "\n",
-    "In order to make sure we our RAG is working, we need to ensure we have a document that can be used as a **knowledge base**. \n",
+    "In order to make sure our RAG is working, we need to ensure we have a document that can be used as a **knowledge base**. \n",
     "\n",
     "We'll store our PDF in the `sample_pdfs` directory in the same folder as this notebook."
    ]
@@ -226,7 +226,7 @@
    "source": [
     "## Configure LlamaIndex Components\n",
     "\n",
-    "To setup [LlamaIndex](https://docs.llamaindex.ai/en/stable/) with **kluster.ai** we neesd to setup `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
+    "To set up [LlamaIndex](https://docs.llamaindex.ai/en/stable/) with **kluster.ai** we neesd to setup `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
    ]
   },
   {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "cd55f027",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
    ],
    "source": [
     "# Query about content from Polar Paper PDF\n",
-    "pdf_query = \"Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> If you dont know, say 'I don't know'.\"\n",
+    "pdf_query = \"Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> If you don't know, say 'I don't know'.\"\n",
     "\n",
     "print(f\"Query: {pdf_query}\\n\")\n",
     "\n",
@@ -408,7 +408,7 @@
    "id": "b7b52358",
    "metadata": {},
    "source": [
-    "Again, we continue to test queries against the knowledge base to evaluate how well the RAG system retrieves and grounds answers using the PDF document. \n",
+    "We continue to test queries against the knowledge base to evaluate how well the RAG system retrieves and grounds answers using the PDF document. \n",
     "This helps demonstrate the effectiveness of retrieval-augmented generation compared to direct LLM responses."
    ]
   },
