--- a/tutorials/klusterai-api/integrating-tools.ipynb
+++ b/tutorials/klusterai-api/integrating-tools.ipynb
@@ -213,7 +213,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"chatcmpl-47b7dfc6-a17e-4fac-b5bb-2ed5150fa0ca\",\n",
+      "  \"id\": \"chatcmpl-61a853c6-be8d-4eec-9a6c-8268b25d9437\",\n",
       "  \"choices\": [\n",
       "    {\n",
       "      \"finish_reason\": \"tool_calls\",\n",
@@ -223,11 +223,12 @@
       "        \"content\": null,\n",
       "        \"refusal\": null,\n",
       "        \"role\": \"assistant\",\n",
+      "        \"annotations\": null,\n",
       "        \"audio\": null,\n",
       "        \"function_call\": null,\n",
       "        \"tool_calls\": [\n",
       "          {\n",
-      "            \"id\": \"chatcmpl-tool-4db47677c5684e8db141ecd02c6c5623\",\n",
+      "            \"id\": \"chatcmpl-tool-8037b502f5d14f98870a249974cb15b6\",\n",
       "            \"function\": {\n",
       "              \"arguments\": \"{\\\"expression\\\": \\\"1337 * 42\\\"}\",\n",
       "              \"name\": \"calculator\"\n",
@@ -239,15 +240,15 @@
       "      \"stop_reason\": 128008\n",
       "    }\n",
       "  ],\n",
-      "  \"created\": 1747705029,\n",
+      "  \"created\": 1747782257,\n",
       "  \"model\": \"klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\",\n",
       "  \"object\": \"chat.completion\",\n",
       "  \"service_tier\": null,\n",
       "  \"system_fingerprint\": null,\n",
       "  \"usage\": {\n",
-      "    \"completion_tokens\": 21,\n",
+      "    \"completion_tokens\": 20,\n",
       "    \"prompt_tokens\": 252,\n",
-      "    \"total_tokens\": 273,\n",
+      "    \"total_tokens\": 272,\n",
       "    \"completion_tokens_details\": null,\n",
       "    \"prompt_tokens_details\": null\n",
       "  },\n",
@@ -346,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result of multiplying 1337 by 42 is 56154.\n"
+      "The result of 1337 multiplied by 42 is 56,154.\n"
      ]
     }
    ],
@@ -549,9 +550,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the search results, here are some of the latest findings on climate change:\n",
+      "\n",
+      "1. **Increasing Impacts on Global Ecosystems**: New studies have revealed the growing effects of climate change on the world's ecosystems, including more frequent and severe weather events, rising sea levels, and altered species distributions.\n",
+      "2. **Advancements in Renewable Energy**: Research has made significant strides in developing renewable energy technologies, such as solar and wind power, that can help mitigate the greenhouse gas emissions driving climate change.\n",
+      "3. **Accelerating Sea-Level Rise**: Scientists have found that sea levels are rising at an accelerating rate, with high-tide flooding becoming more common in coastal areas.\n",
+      "4. **Extreme Weather Events**: Studies have shown that climate change is leading to an increase in extreme weather events, such as heatwaves, droughts, and heavy precipitation events.\n",
+      "5. **Methane Emissions**: Research has highlighted the importance of reducing methane emissions, which are a potent greenhouse gas and a major contributor to climate change.\n",
+      "6. **Ocean Acidification**: Scientists have warned about the alarming rate of ocean acidification, which is caused by the absorption of carbon dioxide from the atmosphere and can have devastating effects on marine ecosystems.\n",
+      "7. **Climate Change and Human Health**: Studies have linked climate change to a range of health impacts, including increased mortality rates, heat stress, and the spread of diseases.\n",
+      "\n",
+      "These findings underscore the urgent need for climate action, including reducing greenhouse gas emissions, transitioning to renewable energy sources, and adapting to the unavoidable impacts of climate change.\n"
+     ]
+    }
+   ],
    "source": [
     "search_query = \"What are the latest findings on climate change?\"\n",
     "search_response = run_with_tools(search_query, web_search_tools)\n",
@@ -562,17 +581,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multi-tool example\n",
+    "## Multi-tool example: Bitcoin to Satoshi USD conversion\n",
     "\n",
     "Real-world questions often need more than one capability. For instance, a user might ask:\n",
     "\n",
     "> “Look up Bitcoin’s market cap **and** convert it to euros.”\n",
     "\n",
-    "By registering several tools in a single `tools` array, we give the LLM a menu of options. We’ll demonstrate with the question:\n",
-    "\n",
-    "> “If Earth’s temperature rises by 2 °C, what percentage increase is that from the current average of 15 °C?”\n",
-    "\n",
-    "To answer, the model only needs arithmetic, but if the prompt also required live data—e.g., “*…and cite a recent study on global warming*”—it could call **two** tools in one turn: first `web_search`, then `calculator`. Here’s how we orchestrate that multi-tool workflow:"
+    "To answer, the model only needs arithmetic, but if the prompt also required live data, it could call two tools in one turn: first `web_search`, then `calculator`. Here’s how we orchestrate that multi-tool workflow:"
    ]
   },
   {
@@ -586,195 +601,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ── Tool specs ────────────────────────────────────────────────────────────\n",
-    "multi_tools = [\n",
-    "    {\n",
-    "        \"type\": \"function\",\n",
-    "        \"function\": {\n",
-    "            \"name\": \"calculator\",\n",
-    "            \"description\": \"Perform arithmetic calculations\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"expression\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The mathematical expression to evaluate\"\n",
-    "                    }\n",
-    "                },\n",
-    "                \"required\": [\"expression\"]\n",
-    "            }\n",
-    "        }\n",
-    "    },\n",
-    "    {\n",
-    "        \"type\": \"function\",\n",
-    "        \"function\": {\n",
-    "            \"name\": \"web_search\",\n",
-    "            \"description\": \"Search the web for information\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"query\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The search query\"\n",
-    "                    }\n",
-    "                },\n",
-    "                \"required\": [\"query\"]\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The below code will run each requested tool, then feed the results back to the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "def process_multi_tool_calls(response, original_query):\n",
-    "    msg = response.choices[0].message\n",
-    "    if not msg.tool_calls:\n",
-    "        return msg.content\n",
-    "\n",
-    "    tool_msgs = []\n",
-    "    for call in msg.tool_calls:\n",
-    "        args = json.loads(call.function.arguments)\n",
-    "        if call.function.name == \"calculator\":\n",
-    "            result = execute_calculator(args[\"expression\"])\n",
-    "        elif call.function.name == \"web_search\":\n",
-    "            result = execute_web_search(args[\"query\"])\n",
-    "        else:\n",
-    "            result = {\"error\": f\"Unknown tool: {call.function.name}\"}\n",
-    "\n",
-    "        tool_msgs.append({\n",
-    "            \"role\": \"tool\",\n",
-    "            \"tool_call_id\": call.id,\n",
-    "            \"content\": json.dumps(result)\n",
-    "        })\n",
-    "\n",
-    "    final = client.chat.completions.create(\n",
-    "        model=model,\n",
-    "        messages=[\n",
-    "            {\"role\": \"user\", \"content\": original_query},\n",
-    "            msg.model_dump(),\n",
-    "            *tool_msgs,\n",
-    "        ]\n",
-    "    )\n",
-    "    return final.choices[0].message.content"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Try out the multi-tool demo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ── Demo ─────────────────────────────────────────────────────────────────\n",
-    "multi_query = (\n",
-    "    \"If the Earth's temperature rises by 2 degrees, what percentage increase \"\n",
-    "    \"is that from the current average global temperature of 15 degrees Celsius?\"\n",
-    ")\n",
-    "\n",
-    "multi_response = run_with_tools(multi_query, multi_tools)\n",
-    "print(process_multi_tool_calls(multi_response, multi_query))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Real-world use case: document analysis with tools\n",
-    "\n",
-    "We’ll let the model read a report and, when it spots numbers, invoke the calculator:\n",
-    "\n",
-    "1. **Wrap the context** – embed the document and the user’s question in a single prompt  \n",
-    "2. **Let the LLM decide** – pass the prompt along with `multi_tools`; the model can choose to read or calculate  \n",
-    "3. **Process tool calls** – if the model pauses with a `tool_calls` block, we run the appropriate tools and feed the results back  \n",
-    "4. **Return prose** – the model weaves the numeric answer into a natural-language response\n",
-    "\n",
-    "This pattern scales to meeting minutes, legal contracts, or server log files—anywhere the model must blend language understanding with deterministic math.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def document_analysis_with_tools(document, question):\n",
-    "    # Prepare the prompt\n",
-    "    prompt = f\"\"\"\n",
-    "Document: \n",
-    "{document}\n",
-    "\n",
-    "Question about the document: {question}\n",
-    "\n",
-    "Please answer the question based on the document. If calculations are needed, use the calculator tool.\n",
-    "\"\"\"\n",
-    "    \n",
-    "    # Use the multi-tools from before\n",
-    "    response = run_with_tools(prompt, multi_tools)\n",
-    "    final_answer = process_multi_tool_calls(response, prompt)\n",
-    "    \n",
-    "    return final_answer\n",
-    "\n",
-    "# Sample document and question\n",
-    "sample_document = \"\"\"\n",
-    "kluster.ai Performance Report 2024\n",
-    "\n",
-    "In Q1 2024, our platform processed 2.5 million requests, a 25% increase from Q4 2023 (2 million requests). \n",
-    "The average response time was reduced from 350ms to 280ms, representing a 20% improvement.\n",
-    "Our customer base grew from 500 to 800 companies, and revenue increased from $1.2M to $1.8M.\n",
-    "\"\"\"\n",
-    "\n",
-    "sample_question = \"What was the percentage increase in revenue according to the report?\"\n",
-    "\n",
-    "document_analysis_result = document_analysis_with_tools(sample_document, sample_question)\n",
-    "print(document_analysis_result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Real-world use case: Bitcoin to Satoshi USD conversion\n",
+    "In the below code, we define a Bitcoin price tool that simulates a web search to retrieve recent price data. As we've already defined a calculator tool earlier in the notebook, we'll re-use the calculator tool with the `execute_calculator` function. As in prior examples, we are using mock data with simplified results for demonstration purposes.\n",
     "\n",
     "Let's implement a more advanced use case that demonstrates tool chaining to calculate the price of a Satoshi in USD. A Satoshi is 100,000,000 of a Bitcoin. Our example will:\n",
     "\n",
     "1. **Fetch market data** – use web search to look up the current BTC/USD price\n",
     "2. **Parse the results** – extract the numeric price from text-based search results\n",
     "3. **Calculate the conversion** – pass the extracted price to the calculator tool to find one Satoshi's value\n",
-    "4. **Format the response** – combine the data into a user-friendly answer\n",
-    "\n",
-    "As in prior examples, we are using mock data with simplified results for demonstration purposes."
+    "4. **Format the response** – combine the data into a user-friendly answer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1: Looking up the current Bitcoin price...\n",
+      "Found Bitcoin price: $105248.63\n",
+      "\n",
+      "Step 2: Using calculator tool to find the value of one Satoshi...\n",
+      "Calculator result: One Satoshi = $0.00105249 USD\n",
+      "\n",
+      "Based on the current Bitcoin price of $105248.63 USD, I used the calculator tool to find the value of one Satoshi.\n",
+      "\n",
+      "Since 1 Bitcoin (BTC) = 100,000,000 Satoshi, the value of one Satoshi is:\n",
+      "$105248.63 ÷ 100,000,000 = $0.00105249 USD\n",
+      "\n",
+      "Therefore, one Satoshi is currently worth $0.00105249 USD.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def btc_satoshi_conversion_with_tools():\n",
     "    \"\"\"\n",
@@ -839,36 +703,6 @@
     "print(btc_satoshi_result)"
    ]
   },
-  {
-  "cell_type": "code",
-  "execution_count": 12,
-  "metadata": {},
-  "outputs": [
-    {
-      "name": "stdout",
-      "output_type": "stream",
-      "text": [
-        "Step 1: Looking up the current Bitcoin price...\n",
-        "Found Bitcoin price: $105248.63\n",
-        "\n",
-        "Step 2: Using calculator tool to find the value of one Satoshi...\n",
-        "Calculator result: One Satoshi = $0.00105249 USD\n",
-        "\n",
-        "Based on the current Bitcoin price of $105248.63 USD, I used the calculator tool to find the value of one Satoshi.\n",
-        "\n",
-        "Since 1 Bitcoin (BTC) = 100,000,000 Satoshi, the value of one Satoshi is:\n",
-        "$105248.63 ÷ 100,000,000 = $0.00105249 USD\n",
-        "\n",
-        "Therefore, one Satoshi is currently worth $0.00105249 USD.\n"
-      ]
-    }
-  ],
-  "source": [
-    "# Demo: Bitcoin → Satoshi conversion\n",
-    "btc_satoshi_result = btc_satoshi_conversion_with_tools()\n",
-    "print(btc_satoshi_result)"
-  ]
-},
   {
    "cell_type": "markdown",
    "metadata": {},
