--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -848,7 +848,7 @@
    "id": "summary-heading",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "## Summary\n",
     "\n",
     "In this tutorial, we've learned how to:\n",
     "\n",
