fix: update typos and grammar check

--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -13,10 +13,10 @@
    "id": "8566fe2a",
    "metadata": {},
    "source": [
-    "There are usescases when model struggle to complete tasks due to lack of specialized knowledge. This could lead to issues like hallucinations where models generate incorrect or frabricated information.\n",
-    "To help mitigate this, **Retrieval-Augmented Generation (RAG)** allows the model to pull real time data from specified sources.\n",
+    "There are use cases when models struggle to complete tasks due to lack of specialized knowledge. This could lead to issues like hallucinations where models generate incorrect or fabricated information.\n",
+    "To help mitigate this, **Retrieval-Augmented Generation (RAG)** allows the model to pull real-time data from specified sources.\n",
     "\n",
-    "We'll learn how to use the[embeddings endpoint](https://docs.kluster.ai/api-reference/reference/#create-embeddings) in a Retrieval Augmented Generation (RAG) pipeline with PDF document support using [LlamaIndex](https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/) to handle the data and retrieval. \n",
+    "This tutorial demonstrates how to use the [embeddings endpoint](https://docs.kluster.ai/api-reference/reference/#create-embeddings) in a RAG pipeline with PDF document support using [LlamaIndex](https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/) to handle the data and retrieval. \n",
     "\n",
     "\n",
     "**Models:**\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "f3cfcc54",
    "metadata": {},
    "outputs": [],
@@ -85,6 +85,8 @@
     "import json\n",
     "from getpass import getpass\n",
     "from pprint import pprint\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "from openai import OpenAI\n",
     "\n",
@@ -172,11 +174,20 @@
    "source": [
     "## Convert a PDF file into embeddings\n",
     "\n",
-    "We can convert any document into embeddings, for this excercise we are going to use a large PDF file,  but you can adapt this to your needs.\n",
+    "You can convert any document into embeddings. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5be42a3",
+   "metadata": {},
+   "source": [
+    "### Download document\n",
+    "For this exercise, this tutorial uses a large PDF file, but you can adapt this to your needs.\n",
     "\n",
-    "The files we use will serve as our LLM's **knowledge base**. \n",
+    "The files used will serve as the LLM's **knowledge base**. \n",
     "\n",
-    "Let's donwload the PDF and store it on the `sample_pdfs` directory."
+    "Download the PDF and store it in the `sample_pdfs` directory."
    ]
   },
   {
@@ -221,9 +232,9 @@
    "source": [
     "### Load Document\n",
     "\n",
-    "Now time to load the 115 pages PDF document into memory.\n",
+    "It's now time to load the 115-page PDF document into memory.\n",
     "\n",
-    "We leverage [LlamaIndex](!https://docs.llamaindex.ai/en/stable/examples/data_connectors/simple_directory_reader/) `SimpleDirectoryReader` as a data connector that just pass in a input directory or a list of files and It will select the best file reader based on the file extensions."
+    "This example leverages [LlamaIndex](https://docs.llamaindex.ai/en/stable/examples/data_connectors/simple_directory_reader/) `SimpleDirectoryReader` as a data connector. Pass in an input directory or a list of files, and it selects the best file reader based on the file extensions."
    ]
   },
   {
@@ -259,11 +270,11 @@
    "id": "df42ac97",
    "metadata": {},
    "source": [
-    "### Setup \n",
+    "## Setup RAG\n",
     "\n",
-    "If we try to send the entire PDF document to the LLM, we will end up comsuning the entire context window with no success.\n",
+    "If the entire PDF document is sent to the LLM, it would consume the entire context window with no success.\n",
     "\n",
-    "That's why we need to divide our data in smaller pieces called chunks. <a href=\"https://docs.llamaindex.ai/en/stable/\" target=\"_blank\">LlamaIndex</a> provides an easy way of doing this.\n",
+    "To address this, the document needs to be divided into smaller pieces called chunks. <a href=\"https://docs.llamaindex.ai/en/stable/\" target=\"_blank\">LlamaIndex</a> provides an efficient way to accomplish this.\n",
     "\n",
     "- **LLM** - the model responsible for generating the responses from the knowledge base.\n",
     "- **Embedding model** - the model used to convert text into vectors (embeddings), enabling semantic similarity searches.\n",
@@ -271,22 +282,15 @@
     "    - `chunk_size` - the size of each chunk (in tokens).\n",
     "    - `chunk_overlap` -  the number of tokens overlapping between consecutive chunks.\n",
     "\n",
-    "To set up with **kluster.ai**, we need to configure `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
+    "To set up with **kluster.ai**, configure `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "52d3b654",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -308,7 +312,7 @@
     "    is_chat_model=True\n",
     ")\n",
     "\n",
-    "# Setup the the embedding model\n",
+    "# Set up the embedding model\n",
     "embed_model = OpenAILikeEmbedding(\n",
     "    model_name=\"BAAI/bge-m3\",\n",
     "    api_base=base_url,\n",
@@ -329,20 +333,20 @@
    "id": "c9cc04f1",
    "metadata": {},
    "source": [
-    "## Create the VectorStore\n",
+    "### Create the VectorStore\n",
     "\n",
-    "`VectorStoreIndex.from_documents(documents)` takes the PDF and internally breaks these documents into smaller text chunks (Nodes) using settings like chunk_size you defined earlier. \n",
+    "`VectorStoreIndex.from_documents(documents)` takes the PDF and internally breaks these documents into smaller text chunks (Nodes) using settings like `chunk_size` defined earlier. \n",
     " \n",
     "Next, it converts each chunk into embeddings using the pre-configured embedding model. \n",
     "\n",
     "Finally, it stores these chunks and their embeddings in an in-memory vector store, making the index object ready for efficient similarity searches.\n",
     "\n",
-    "Let's create a `VectorStoreIndex` from the PDF document."
+    "Create a `VectorStoreIndex` from the PDF document."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "390b784f",
    "metadata": {},
    "outputs": [
@@ -390,11 +394,9 @@
    "source": [
     "### Create the query engine\n",
     "\n",
-    "When you ask a question, it's first converted into a numerical embedding. The engine then searches your VectorStoreIndex to retrieve the most semantically similar text chunks from your document. Finally, these retrieved chunks (as context) and your original question are given to the LLM to generate a grounded answer.\n",
+    "When a question is asked, it's first converted into a numerical embedding. The engine then searches the VectorStoreIndex to retrieve the most semantically similar text chunks from the document. Finally, these retrieved chunks (as context) and the original question are given to the LLM to generate a grounded answer.\n",
     "\n",
-    "Compare responses using RAG (with the knowledge base) versus direct LLM responses without context.\n",
-    "\n",
-    "Let's create the `query engine` and compare it against a simple llm with no RAG."
+    "The following steps create a `query engine` and compare it against a simple LLM with no RAG capabilities."
    ]
   },
   {
@@ -430,14 +432,18 @@
    "source": [
     "## Test your RAG\n",
     "\n",
-    "Compare two queries: one using the RAG knowledge base and one using only the LLM.\n",
+    "Now that the RAG system is configured, test it with a query about the PDF document. This demonstration shows how a single RAG query processes:\n",
     "\n",
-    "The following queries ask specific questions that require information from the PDF, which the LLM alone is unlikely to answer accurately."
+    "1. **Query processing** - your question is converted into an embedding vector\n",
+    "2. **Chunk retrieval** - the system finds the most relevant document chunks using similarity search\n",
+    "3. **Response generation** - the LLM uses the retrieved chunks as context to answer your question\n",
+    "\n",
+    "The following example includes detailed output showing the retrieved chunks and their similarity scores, helping you understand how the RAG system selects relevant information from your knowledge base."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "50283ee6",
    "metadata": {},
    "outputs": [
@@ -500,8 +506,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7375efd",
+   "metadata": {},
+   "source": [
+    "### Compare results\n",
+    "\n",
+    "To highlight the effectiveness of RAG, the following code compares responses from the RAG system against direct LLM responses without any document context. This comparison demonstrates how RAG provides more accurate, grounded answers for domain-specific questions by leveraging the knowledge base."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cd55f027",
    "metadata": {},
    "outputs": [
@@ -520,7 +536,7 @@
    ],
    "source": [
     "# Let's fact check the same query using the direct LLM response without RAG\n",
-    "pdf_query = \"Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> **Important: if you dont the answer just replay 'SORRY, I DONT KNOW' without any other text.** If you do have data to answer, provide full answer quoting the sources\"\n",
+    "pdf_query = \"Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> **Important: if you don't know the answer just reply 'SORRY, I DON'T KNOW' without any other text.** If you do have data to answer, provide full answer quoting the sources\"\n",
     "print(f\"Query: {pdf_query}\\n\")\n",
     "\n",
     "print(\"--- Direct LLM Response (without RAG) ---\")\n",
@@ -564,7 +580,7 @@
    ],
    "source": [
     "# Query about a specific technical detail in the paper\n",
-    "technical_query = \"What does the Toxicology and Monitoring of Pollutant Levels in Polar Bear Tissue says about the CHC levels? IMPORTANT: If you don't know, say 'I don't know'.\"\n",
+    "technical_query = \"What does the Toxicology and Monitoring of Pollutant Levels in Polar Bear Tissue say about the CHC levels? IMPORTANT: If you don't know, say 'I don't know'.\"\n",
     "\n",
     "print(f\"Query: {technical_query}\\n\")\n",
     "\n",
